--- a/Lang/Resources.resx
+++ b/Lang/Resources.resx
@@ -270,8 +270,8 @@
     <data name="CompileCancel" xml:space="preserve">
         <value>Compilation canceled</value>
     </data>
-    <data name="RestartSetup" xml:space="preserve">
-        <value>Restart Setup (Update MoSpeed)</value>
+    <data name="UpdateBtn" xml:space="preserve">
+        <value>Update MoSpeed (overrides currently selected MoSpeed)</value>
     </data>
     <data name="ConfirmReset" xml:space="preserve">
         <value>By updating, everything in '{0}' will be deleted if you choose to continue. The setup dialog will appear and you can choose a setup option again. Do you want to continue?</value>
@@ -280,7 +280,7 @@
         <value>Yes</value>
     </data>
     <data name="ConfigReadError" xml:space="preserve">
-        <value>There has been an error reading the config file. Once you close this pop-up, everything in {0} will be deleted and the Setup will reappear.</value>
+        <value>There has been an error reading the config file. Once you close this pop-up, everything in {0} will be deleted and the Setup will reappear. ({1})</value>
     </data>
     <data name="Ignore" xml:space="preserve">
         <value>Ignore</value>
